# moodle-panopto-downloader

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.de.md  README.md  SECURITY.md  config.example.ini  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: moodle-web-services.md
src/moodle_panopto_downloader/: __init__.py  __main__.py  cli.py  config.py  downloader.py  errors.py  moodle.py  panopto.py  utils.py  vocab.py
tests/: test_cli.py  test_config.py  test_docs.py  test_downloader.py  test_integration.py  test_moodle.py  test_panopto.py  test_vocab.py
tests/fixtures/: course_contents.json  course_ltis.json  site_info.json
