[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moodle-panopto-downloader"
dynamic = ["version"]
description = "Discover and download Panopto videos linked in Moodle courses via the Moodle Web Services API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Christian-Maximilian Steier" }]
keywords = ["moodle", "panopto", "webservices", "video", "yt-dlp", "research", "education"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "requests>=2.28",
    "yt-dlp>=2024.0.0",
]

[project.optional-dependencies]
pdf = ["pypdf>=4.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "types-requests>=2.28",
    "pre-commit>=3.5",
    "pypdf>=4.0",
]

[project.urls]
Homepage = "https://github.com/HSD-ZWEK/moodle-panopto-downloader"
Issues = "https://github.com/HSD-ZWEK/moodle-panopto-downloader/issues"

[project.scripts]
moodle-panopto-downloader = "moodle_panopto_downloader.cli:main"

[tool.setuptools.dynamic]
version = { attr = "moodle_panopto_downloader.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
moodle_panopto_downloader = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]
